[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Aidiakapi <aidiakapi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = {version = "0.2", features = ["std", "compile-time-rng"]}
arrayvec = "0.5"
colored = "1.9"
nom = "5.0"
num = "0.2"
thiserror = "1.0"

[workspace]
members = ["input_dl"]
