[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Aidiakapi <aidiakapi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = {version = "0.7", features = ["std", "compile-time-rng"]}
arrayvec = "0.7"
colored = "2.0"
itertools = "0.10"
nom = "7.0"
num = "0.4"
string_cache = { version = "0.8", default-features = false }
thiserror = "1.0"

[workspace]
members = ["input_dl"]
